[tool.poetry]
name = "valorant-store"
version = "0.1.0"
description = ""
authors = ["Jack O'Sullivan <jack@arista.com>"]

[tool.poetry.dependencies]
python = "^3.10"
aiohttp = "^3.8.1"
riot-auth = { git = "https://github.com/floxay/python-riot-auth.git", branch = "main" }

[tool.poetry.dev-dependencies]

[tool.poetry.scripts]
valo = 'valorant_store:main'

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
